# Platformer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake-linux.yml  cmake-release.yml  windowsbuild.yml
Platformer/: CMakeLists.txt  main.cpp
Platformer/Platformer/: GameObject.cpp  GameObject.h  Platformer.cpp  Platformer.h
Platformer/utils/: Component.cpp  Component.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h
Platformer/window/: window.cpp  window.h
res/images/: enemy.png.kra  player.png.kra
res/shader/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  main.cpp
src/Platformer/: CMakeLists.txt  OpenGL.cpp  OpenGL.h  Physics.cpp  Physics.h  Platformer.cpp  Platformer.h  eventHandler.cpp  eventHandler.h  keyState.cpp  keyState.h  window.cpp  window.h
src/Platformer/Core/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  KeyState.cpp  KeyState.h  Music.cpp  Music.h  OpenGL.cpp  OpenGL.h  Platformer.cpp  Platformer.h  Window.cpp  Window.h
src/Platformer/Physics/: CMakeLists.txt  Physics.cpp  Physics.h
src/Platformer/Player/: CMakeLists.txt  Player.cpp  Player.h  PlayerState.cpp  PlayerState.h
src/Utils/: BackGround.cpp  BackGround.h  CMakeLists.txt  Component.cpp  Component.h  Constants.h  GameObject.cpp  Map.cpp  Map.h  PhysicsMap.cpp  PhysicsMap.h  TextureManager.cpp  TextureManager.h  Time.cpp  Time.h
src/Utils/Components/: Animation.cpp  Animation.h  CMakeLists.txt  Component.cpp  Component.h  TileComponent.h
src/debugHelp/: CMakeLists.txt  box2dDebugDraw.cpp  box2dDebugDraw.h
src/main/: CMakeLists.txt  main.cpp
src/utils/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  PhysicsMap.cpp  PhysicsMap.h  TextureManager.cpp  TextureManager.h  Time.cpp  Time.h
tests/: CMakeLists.txt
tests/window/: test_window.cpp
